@@ -1,5 +1,11 @@
 2010-12-12  Vincent Torri  <doursse at users dot sf dot net>
 
+	* src/lib/evil_libgen.c:
+	* src/lib/evil_libgen.h:
+	add dirname() function
+
+2010-12-12  Vincent Torri  <doursse at users dot sf dot net>
+
 	* src/lib/evil_unistd.c:
 	* src/lib/evil_unistd.h:
 	add usleep() for vc++
